--- a/templates/base/admin/profile.latte
+++ b/templates/base/admin/profile.latte
@@ -60,6 +60,14 @@
                     </label>
                 </div>
 
+                <div>
+                    <label>
+
+                        <input class="input input-bordered w-full" name="birthday" type="date" placeholder="{text('placeholder.birthday')}"
+                               value="{$profile->birthday}">
+                    </label>
+                </div>
+
                 <div class="text-center">
                     {button type:submit, text:text('button.update')}
                 </div>
