--- a/templates/base/head.latte
+++ b/templates/base/head.latte
@@ -1,30 +1,30 @@
 {block head}
     <meta charset="utf-8"/>
-    <title>{setting('title')}</title>
+    <title>{info('title')}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="{setting('name')}">
+    <meta name="apple-mobile-web-app-title" content="{info('name')}">
     <meta name="theme-color" content="#ffffff">
-    <meta name="description" content="{setting('description')}">
-    <meta name="keywords" content="{setting('keywords')}">
-    <meta name="author" content="{setting('author')}">
-    <meta name="date.created" content="{setting('created')}">
-    <meta name="date.available" content="{setting('available')}">
-    <meta name="date.updated" content="{setting('updated')}">
+    <meta name="description" content="{info('description')}">
+    <meta name="keywords" content="{info('keywords')}">
+    <meta name="author" content="{info('author')}">
+    <meta name="date.created" content="{info('created')}">
+    <meta name="date.available" content="{info('available')}">
+    <meta name="date.updated" content="{info('updated')}">
     <meta name="robots" content="index, follow">
     <meta name="revisit-after" content="3 days">
-    <meta property="og:title" content="{setting('title')}">
-    <meta property="og:site_name" content="{setting('name')}">
-    <meta property="og:url" content="{setting('url')}">
-    <meta property="og:description" content="{setting('description')}">
+    <meta property="og:title" content="{info('title')}">
+    <meta property="og:site_name" content="{info('name')}">
+    <meta property="og:url" content="{info('url')}">
+    <meta property="og:description" content="{info('description')}">
     <meta property="og:type" content="website">
-    <meta property="og:locale" content="{setting('language')}"/>
-    <meta property="og:image" content="{setting('image')}"/>
+    <meta property="og:locale" content="{info('language')}"/>
+    <meta property="og:image" content="{info('image')}"/>
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="{setting('title')}">
-    <meta name="twitter:description" content="{setting('description')}">
-    <meta name="twitter:image" content="{setting('image')}">
+    <meta name="twitter:title" content="{info('title')}">
+    <meta name="twitter:description" content="{info('description')}">
+    <meta name="twitter:image" content="{info('image')}">
 
     <link rel="shortcut icon" type="image/x-icon" href="{media('favicon/favicon.ico')}">
     <link rel="shortcut icon" type="image/gif" href="{media('favicon/favicon.gif')}">
