--- a/plugins/items/template/template_list_modal.latte
+++ b/plugins/items/template/template_list_modal.latte
@@ -12,7 +12,7 @@
 </div>
 
 <div class="text-center p-4">
-    <label for="template_list_modal" class="btn btn-square btn-primary">
+    <label for="template_list_modal" class="btn btn-square btn-primary shadow-none">
         {icon("feather/plus.svg")|noescape}
     </label>
 </div>
