--- a/plugins/moment/template/calendar.latte
+++ b/plugins/moment/template/calendar.latte
@@ -42,5 +42,5 @@
         </div>
     </div>
 </div>
-<input type="hidden" name="start_date" data-calendar="start" data-calendar-id="{$calendar}">
-<input type="hidden" name="end_date" data-calendar="end" data-calendar-id="{$calendar}">
+<input type="date" name="start_date" data-calendar="start" data-calendar-id="{$calendar}" value="{$startDate}">
+<input type="date" name="end_date" data-calendar="end" data-calendar-id="{$calendar}" value="{$endDate}">
