--- a/plugins/moment/template/modal_add.latte
+++ b/plugins/moment/template/modal_add.latte
@@ -14,7 +14,7 @@
                 <div class="tab-content">
                         <label class="input w-full">
                             {php $momentFactoryTitles = text('moment.moment.factory.titles')}
-                            <input placeholder="{text('moment.moment.title')}" name="title" type="text" value="{$momentFactoryTitles[array_rand($momentFactoryTitles)]}"/>
+                            <input placeholder="{text('moment.moment.title')}" name="title" type="text" value="{$moment?->title ?? $momentFactoryTitles[array_rand($momentFactoryTitles)]}"/>
                         </label>
                 </div>
                 {* Calendar *}
@@ -27,15 +27,17 @@
                             {include 'calendar.latte',
                             'calendar' => 'moment',
                             'startYear' => profile()?->birthday ? datetime()::parse(profile()->birthday)->year : 2000,
-                            'endYear' => datetime()::now()->year + 5
+                            'endYear' => datetime()::now()->year + 5,
+                            'startDate' => $moment?->getDateTime()?->start_date ?? datetime()::now(),
+                            'endDate' => $moment?->getDateTime()?->start_date
                             }
                             <div class="flex gap-4 items-center w-full mt-4">
                                 <label class="input">
-                                    <input name="start_time" type="time"/>
+                                    <input name="start_time" type="time" value="{$moment?->getDateTime()->start_time}"/>
                                 </label>
                                 <div class="text-xs h-auto uppercase">{text('misc.to')}</div>
                                 <label class="input">
-                                    <input name="end_time" type="time"/>
+                                    <input name="end_time" type="time" value="{$moment?->getDateTime()->end_time}"/>
                                 </label>
                             </div>
                         </div>
@@ -48,10 +50,10 @@
                 <div class="tab-content">
                         <div class="space-y-4">
                             <label class="input w-full">
-                                <input placeholder="{text('moment.moment.city')}" name="city" type="text"/>
+                                <input placeholder="{text('moment.moment.city')}" name="city" type="text" value="{$moment?->getLocation()?->city}"/>
                             </label>
                             <label class="input w-full">
-                                <input placeholder="{text('moment.moment.country')}" name="country" type="text"/>
+                                <input placeholder="{text('moment.moment.country')}" name="country" type="text" value="{$moment?->getLocation()?->country}"/>
                             </label>
                         </div>
                 </div>
@@ -62,13 +64,14 @@
                 </label>
                 <div class="tab-content">
                         <div class="flex flex-wrap gap-4">
+                            {var $peopleIds = array_map(fn($p) => $p->user_id, $moment->getPeople() ?? [])}
                             {foreach (new \Ivy\Model\Profile)->fetchAll() as $person}
                                 <label class="swap">
                                     <input
                                             type="checkbox"
                                             name="people[]"
                                             value="{$person->user_id}"
-                                            {if $person->user_id === \Ivy\Model\User::getAuth()->getUserId()}checked{/if}
+                                            {if in_array($person->user_id, $peopleIds) || $person->user_id === auth()->getUserId()}checked{/if}
                                     />
                                     <span class="swap-off overflow-hidden w-10 h-10 rounded-full bg-primary/10 text-primary border-2 border-transparent">
                                         {if $person->user_image}
@@ -99,13 +102,14 @@
                 </label>
                 <div class="tab-content">
                     <div class="flex flex-wrap gap-4">
+                        {var $tagIds = array_map(fn($t) => $t->id, $moment->fetchAllEntityTags() ?? [])}
                         {foreach (new \Tags\Tag)->fetchAll() as $tag}
                             <label class="swap">
                                 <input
                                         type="checkbox"
                                         name="tags[]"
                                         value="{$tag->id}"
-                                        {if $tag->value === 'Moment'}checked{/if}
+                                        {if in_array($tag->id, $tagIds) || $tag->value === 'Moment'}checked{/if}
                                 />
                                 <span class="swap-off badge badge-sm badge-soft badge-primary font-bold p-3">
                                     {$tag->value}
