--- a/plugins/items/template/index.latte
+++ b/plugins/items/template/index.latte
@@ -10,5 +10,10 @@
     </main>
     {if canEditAsAdmin()}
         {render(path('PLUGINS_PATH') . 'items/template/template_list_modal.latte')}
+        <div class="text-center p-4">
+            <label for="template_list_modal" class="btn btn-square btn-primary shadow-none">
+                {icon("feather/plus.svg")|noescape}
+            </label>
+        </div>
     {/if}
 {/block}
