--- a/templates/base/admin/setting.latte
+++ b/templates/base/admin/setting.latte
@@ -46,6 +46,8 @@
                                     <td class="text-right">
                                         <input type="hidden" name="setting[{$key}][id]"
                                                value="{$setting->id}">
+                                        <input type="hidden" name="setting[{$key}][name]"
+                                               value="{$setting->name}">
                                         <input n:if="$setting->plugin_id" type="hidden" name="setting[{$key}][plugin_id]"
                                                value="{$setting->plugin_id}">
                                         <div class="join">
