--- a/plugins/items/template/template_list_select.latte
+++ b/plugins/items/template/template_list_select.latte
@@ -1,9 +1,11 @@
+{php $itemTemplates = (new \Items\ItemTemplate)->with(['plugin'])->fetchAll()}
+
 <div class="join w-full">
     <label class="w-full">
         <select name="item_template_id" class="select select-bordered w-full join-item">
             <option disabled selected>Select type of item to add</option>
-            {foreach (new \Items\ItemTemplate)->select(['id', 'name', 'plugins.active'])->addJoin('plugins', 'plugin_url', '=', 'url')->fetchAll() as $item_template}
-                {if $item_template->active}
+            {foreach $itemTemplates as $item_template}
+                {if $item_template->plugin()->active}
                     <option value="{$item_template->id}">{$item_template->name}</option>
                 {/if}
             {/foreach}
