--- a/plugins/moment/template/item.latte
+++ b/plugins/moment/template/item.latte
@@ -3,7 +3,7 @@
     <a href="{path('PUBLIC_URL') . 'moment/' . $item->slug}" class="card {if enabled('timeline')}card-side{/if} border border-base-300">
         <div class="card-body">
             <div class="card-actions">
-                {foreach $moment->fetchAllEntityTags() as $tag}
+                {foreach $moment->tags() as $tag}
                 <div class="badge badge-soft badge-info badge-sm font-bold p-3">
                     {$tag->value}
                 </div>
@@ -24,7 +24,7 @@
                 </p>
             </div>
             <div class="space-x-2">
-                {foreach $moment->getPeople() as $person}
+                {foreach $momentPeople as $person}
                     <div class="avatar">
                         <div class="w-10 rounded-full bg-secondary">
                             {if $person->user_image}
@@ -45,7 +45,10 @@
         <div class="hidden group-hover:block absolute left-1/2 bottom-0 -mb-5 -ml-15">
             <form action="{path('BASE_PATH') . 'item/save/' . $item->id}" method="POST" enctype="multipart/form-data">
                 {csrf()}
-                {render(path('PLUGINS_PATH') . 'items/template/admin_buttons.latte', ['item' => $item])}
+                {render(path('PLUGINS_PATH') . 'items/template/admin_buttons.latte', [
+                'item' => $item,
+                'placeholder' => $moment->title
+                ])}
             </form>
         </div>
     {/if}
